--- a/src/app/user-table/user-table.component.html
+++ b/src/app/user-table/user-table.component.html
@@ -2,13 +2,18 @@
     <span class="headerText">User Management Data Table</span>
     <span class="btnDiv">
       <button mat-flat-button color="primary">Add New</button>
-      <button mat-flat-button color="warn">Delete</button>
+      <button mat-flat-button color="warn" (click)="deleteSelected()">Delete</button>
     </span>
 </div>
 
 
 <div class="user-table">
-  <table mat-table [dataSource]="u.data" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef>No</th>
+      <td mat-cell *matCellDef="let element;let i=index"> {{i+1}} </td>
+    </ng-container>
 
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef> <input (change)="selectAll()" [(ngModel)]="all" type="checkbox"> </th>
@@ -58,11 +63,11 @@
 
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> Action </th>
-      <td mat-cell *matCellDef="let element">
+      <td mat-cell *matCellDef="let element;let i=index">
         <button mat-button color="primary">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-button color="warn">
+        <button mat-button color="warn" (click)="openDeleteDialog(i)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
