--- a/src/app/user-table/user-table.component.html
+++ b/src/app/user-table/user-table.component.html
@@ -1,39 +1,54 @@
 <div class="header">
-    <span class="headerText">User Management Data Table</span>
-    <span class="btnDiv">
-      <button mat-flat-button color="primary">Add New</button>
-      <button mat-flat-button color="warn" (click)="deleteSelected()">Delete</button>
-    </span>
+  <span class="headerText">User Management Data Table</span>
+  <span class="btnDiv">
+    <button mat-flat-button color="primary" (click)="openAddNewDialog()">
+      Add New
+    </button>
+    <button mat-flat-button color="warn" (click)="deleteSelected()">
+      Delete
+    </button>
+  </span>
 </div>
-
 
 <div class="user-table">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef>No</th>
-      <td mat-cell *matCellDef="let element;let i=index"> {{i+1}} </td>
+      <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
     </ng-container>
 
     <ng-container matColumnDef="select">
-      <th mat-header-cell *matHeaderCellDef> <input (change)="selectAll()" [(ngModel)]="all" type="checkbox"> </th>
-      <td mat-cell *matCellDef="let element;let i=index"> <input [(ngModel)]="element.selected"
-          (change)="selectOne(element.selected)" (click)="$event.stopPropagation()" type="checkbox"> </td>
+      <th mat-header-cell *matHeaderCellDef>
+        <input (change)="selectAll()" [(ngModel)]="all" type="checkbox" />
+      </th>
+      <td mat-cell *matCellDef="let element; let i = index">
+        <input
+          [(ngModel)]="element.selected"
+          (change)="selectOne(element.selected)"
+          (click)="$event.stopPropagation()"
+          type="checkbox"
+        />
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="ID">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef>Email</th>
+      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
     </ng-container>
 
     <ng-container matColumnDef="username">
-      <th mat-header-cell *matHeaderCellDef> Username </th>
-      <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+      <th mat-header-cell *matHeaderCellDef>Username</th>
+      <td mat-cell *matCellDef="let element">{{ element.username }}</td>
     </ng-container>
 
     <ng-container matColumnDef="company">
@@ -62,8 +77,8 @@
     </ng-container>
 
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef> Action </th>
-      <td mat-cell *matCellDef="let element;let i=index">
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let element; let i = index">
         <button mat-button color="primary">
           <mat-icon>edit</mat-icon>
         </button>
@@ -74,6 +89,6 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 </div>
