--- a/src/app/delete-dialog/delete-dialog.component.html
+++ b/src/app/delete-dialog/delete-dialog.component.html
@@ -1,3 +1,3 @@
-<h2>AreYou sur?</h2>
-<button mat-button color="warn" (click)="close()">No</button>
+<h2>Are you sure?</h2>
+<button mat-button color="warn" mat-dialog-close>No</button>
 <button mat-button color="warn" (click)="delete()">Yes</button>
