--- a/src/app/user-table/user-table.component.html
+++ b/src/app/user-table/user-table.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <span class="headerText">User Management Data Table</span>
+  <span class="headerText"><a href="#">User Management Data Table</a></span>
   <span class="btnDiv">
     <button mat-flat-button color="primary" (click)="openAddNewDialog()">
       Add New
@@ -54,7 +54,7 @@
     <ng-container matColumnDef="company">
       <th mat-header-cell *matHeaderCellDef> Company </th>
       <td mat-cell *matCellDef="let element">{{element.company.name}}
-        <button mat-button color="primary" (click)="openCompanyDialog()">Full Info</button>
+        <button mat-button color="primary" *ngIf="element.company.name" (click)="openCompanyDialog()">Full Info</button>
 
       </td>
     </ng-container>
@@ -62,7 +62,7 @@
     <ng-container matColumnDef="address">
       <th mat-header-cell *matHeaderCellDef> Address </th>
       <td mat-cell *matCellDef="let element">{{element.address.city}} 
-        <button mat-button color="primary" (click)="openAddressDialog()">Full address</button>
+        <button mat-button color="primary"  (click)="openAddressDialog()">Full address</button>
       </td>
     </ng-container>
 
@@ -79,7 +79,7 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let element; let i = index">
-        <button mat-button color="primary">
+        <button mat-button color="primary" (click)="openEditDialog(i)">
           <mat-icon>edit</mat-icon>
         </button>
         <button mat-button color="warn" (click)="openDeleteDialog(i)">
