created edit function

--- a/src/app/edit-dialog/edit-dialog.component.html
+++ b/src/app/edit-dialog/edit-dialog.component.html
@@ -1,77 +1,91 @@
-<div class="addUser">
-    <form>
-      <div class="inputDiv">
-        <div class="base">
-          <h3>Base</h3>
-          <mat-form-field appearance="fill">
-            <mat-label>Name</mat-label>
-            <input matInput name="name" [(ngModel)]="user.name" />
-          </mat-form-field>
+<div class="editUser" >
+  <form [formGroup]="editUserForm">
+    <div class="base">
+      <h3>Base</h3>
+      <mat-form-field appearance="fill">
+        <mat-label>Name</mat-label>
+        <input matInput name="name" formControlName="name" />
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Username</mat-label>
+        <input matInput name="username" formControlName="username" />
+      </mat-form-field>
+    </div>
+
+    <div class="company" formGroupName="company">
+      <h3>Company</h3>
+
+      <mat-form-field appearance="fill" >
+        <mat-label>Name</mat-label>
+        <input matInput name="name" formControlName="name" />
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+          <mat-label>Catch Phrase</mat-label>
+          <input matInput name="catchPhrase" formControlName="catchPhrase"/>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+          <mat-label>BS</mat-label>
+          <input matInput name="bs" formControlName="bs" />
+        </mat-form-field>
+      </div>
+
+      
+      <div class="address" formGroupName="address">
+        <h3>Address</h3>
   
-          <mat-form-field appearance="fill">
-            <mat-label>Username</mat-label>
-            <input matInput name="username" [(ngModel)]="user.username" />
-          </mat-form-field>
-        </div>
+        <mat-form-field appearance="fill">
+          <mat-label>Street</mat-label>
+          <input matInput name="street" formControlName="street" />
+        </mat-form-field>
   
-        <div class="company">
-          <h3>Company</h3>
+        <mat-form-field appearance="fill">
+          <mat-label>Suite</mat-label>
+          <input matInput name="suite" formControlName="suite" />
+        </mat-form-field>
   
-          <mat-form-field appearance="fill">
-            <mat-label>Name</mat-label>
-            <input matInput name="name" [(ngModel)]="user.company.name" />
-          </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>City</mat-label>
+          <input matInput name="city" formControlName="city" />
+        </mat-form-field>
   
-          <mat-form-field appearance="fill">
-            <mat-label>Catch Phrase</mat-label>
-            <input matInput name="catchPhrase" [(ngModel)]="user.company.catchPhrase" />
-          </mat-form-field>
-  
-          <mat-form-field appearance="fill">
-            <mat-label>BS</mat-label>
-            <input matInput name="bs" [(ngModel)]="user.company.bs" />
-          </mat-form-field>
-        </div>
-  
-        <div class="address">
-          <h3>Address</h3>
-  
-          <mat-form-field appearance="fill">
-            <mat-label>Street</mat-label>
-            <input matInput name="street" [(ngModel)]="user.address.street" />
-          </mat-form-field>
-  
-          <mat-form-field appearance="fill">
-            <mat-label>Suite</mat-label>
-            <input matInput name="suite" [(ngModel)]="user.address.suite" />
-          </mat-form-field>
-  
-          <mat-form-field appearance="fill">
-            <mat-label>City</mat-label>
-            <input matInput name="city" [(ngModel)]="user.address.city" />
-          </mat-form-field>
-  
-          <mat-form-field appearance="fill">
-            <mat-label>Zip Code</mat-label>
-            <input matInput name="zipcode" [(ngModel)]="user.address.zipcode" />
-          </mat-form-field>
-        </div>
-  
-        <div class="geo">
-          <h3>Geo</h3>
-          <mat-form-field appearance="fill">
-            <mat-label>Lat</mat-label>
-            <input matInput name="lat" [(ngModel)]="user.address.geo.lat" />
-          </mat-form-field>
-  
-          <mat-form-field appearance="fill">
-            <mat-label>Lng</mat-label>
-            <input matInput name="lng" [(ngModel)]="user.address.geo.lng" />
-          </mat-form-field>
-        </div>
+        <mat-form-field appearance="fill">
+          <mat-label>Zip Code</mat-label>
+          <input matInput name="zipcode" formControlName="zipcode" />
+        </mat-form-field>
       </div>
   
-      <button mat-button color="warn"  mat-dialog-close>Close</button>
-      <button mat-button color="primary" (click)="edit()">Edit</button>
-    </form>
-  </div>
+      <div class="geo" formGroupName="geo">
+        <h3>Geo</h3>
+        <mat-form-field appearance="fill">
+          <mat-label>Lat</mat-label>
+          <input matInput name="lat" formControlName="lat" />
+        </mat-form-field>
+  
+        <mat-form-field appearance="fill">
+          <mat-label>Lng</mat-label>
+          <input matInput name="lng" formControlName="lng" />
+        </mat-form-field>
+      </div>
+
+      <div class="contact">
+        <h3>Contact</h3>
+        <mat-form-field appearance="fill">
+          <mat-label>Phone</mat-label>
+          <input matInput name="phone" formControlName="phone" />
+        </mat-form-field>
+  
+        <mat-form-field appearance="fill">
+          <mat-label>Website</mat-label>
+          <input matInput name="website" formControlName="website" />
+        </mat-form-field>
+      </div>
+
+  </form>
+  <button mat-button color="warn" mat-dialog-close>Close</button>
+  <button mat-button color="primary" (click)="edit()">Edit</button>
+</div>
+
+
